# PytestAutoApi

./: .gitignore  Makefile  pyproject.toml  run.py
common/: config.yaml  setting.py
data/Login/: login.yaml
data/Practice/: persona_library_flow.yaml
platform/: README.md
platform/backend/: README.md
platform/frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
report/tmp/: 012bd0ed-7075-436a-91d8-f430b478dbb8-attachment.txt  02419ef4-da4b-4f38-ad58-f4efe2051c78-attachment.json  02db4b91-af7b-42eb-b5ff-a182ea36c0d4-attachment.json  1c0f5e29-c5f3-4610-9bfb-1f3801e736de-attachment.txt  27846995-b7d6-4f5b-a5b7-437458cb0fd6-result.json  27dcfb3e-67ee-43b7-9e5d-d8f69c06b527-attachment.json  355362d3-bf0d-436e-a05d-b5095498a17a-attachment.json  40a39dce-4ef0-4b92-aa06-e2e9d464f499-container.json  438fc7fe-2b96-461a-a030-567f7cb9bc78-attachment.json  466dbdf7-f56a-48d6-bd5d-dee448af19d5-attachment.json  48aed01a-739b-4788-9992-b1dc970989e8-result.json  49e14f2e-e24f-4afe-b38a-a29abe46374e-attachment.json  5136563d-54bc-4a71-85dd-3aea72940592-attachment.txt  52b9aaa1-4efb-4564-8a41-3a9e269fe04c-attachment.json  5391d4bc-7d04-4633-bce5-aaa17804cf70-result.json  5b357dc0-325f-487f-8c6c-f0838398b8d9-container.json  625d72ca-d56e-40aa-b304-900eacdd43f5-container.json  70daf17f-38f0-4ff7-8d50-4d5d5b059d3f-container.json  727ff45f-f97e-4131-824b-6fd361ccef65-attachment.json  7be2545a-e69a-4e5e-9f0f-3ac244d7ba5f-container.json  8ee293c1-d875-4675-beb8-bdc753a9d9c3-container.json  94e58a58-022b-4656-9c8c-ae8796be0a64-attachment.json  9583a91e-5c66-4ca2-b1d7-eefda53fc1b2-container.json  (+19 more)
test_case/: conftest.py
tests/: conftest.py
utils/: __init__.py
(+133 files in other folders)
